Fix css z-index label with tooltip component

--- a/public/css/sass/components/common/LabelWithTooltip.scss
+++ b/public/css/sass/components/common/LabelWithTooltip.scss
@@ -1,6 +1,6 @@
 .label-with-tooltip {
   position: absolute;
-  z-index: 12;
+  z-index: 14;
   pointer-events: none;
   transform: translate(-50%, -100%);
 
@@ -12,7 +12,7 @@
     border-right: 4px solid transparent;
     border-top: 6px solid #eaebee;
     content: '';
-}
+  }
 }
 
 .label-with-tooltip-content {
